--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       alert("HI BINU PK OK ,it is time to experience our new innovation so plese signup ");
       </script>
     <div>
-      <h1 class="hedding" contenteditable="true"><strong><span >EXAM</span> RESULT<span> PREDICTOR</span></strong> </h1>
+      <h1 class="hedding" ><strong><span >EXAM</span> RESULT<span> PREDICTOR</span></strong> </h1>
     </div>
     <div class="container">
       <div class="forms-container">
