--- a/hacking1.html
+++ b/hacking1.html
@@ -9,7 +9,7 @@
         <script src="https://code.jquery.com/jquery-3.1.1.js"></script>
         <title>Page Title</title>
         <style id="styled"></style>
-        <link rel="stylesheet" type="text/css" href="hacking1.css">
+        <link rel="stylesheet" type="text/css" href="hacking.css">
         <script type="text/javascript" src="hacking1.js"></script>
     
 
